# quarto-playground

./: .pdm-python  README.md  pyproject.toml
test-book/: _quarto.yml
test-book/_book/: index.html  search.json
test-book/_book/site_libs/bootstrap/: bootstrap-0992b1ff8b289b0001fb716f70d867e4.min.css  bootstrap.min.css
test-manuscript/: .pdm-python  _quarto.yml  index.qmd
test-manuscript/_manuscript/: index-preview.html  index.html  index.out.ipynb  index.qmd
test-manuscript/_manuscript/_tex/: index.tex
test-manuscript/site_libs/bootstrap/: bootstrap-521b54f401cae25ad39cbae51da67ecc.min.css  bootstrap-76dbe1a8dc044a8566a5edaa787e9f2c.min.css
